# wxmpl

./: .gitignore  ChangeLog  LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  README.rst  metasetup.py  plotit  pyproject.toml  setup.py  wxmpl.py
demos/: picking_points.py  plotting.py  stripcharting.py
reference/: api-objects.txt  class-tree.html  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  toc-everything.html  toc-wxmpl-module.html  toc.html  wxmpl-module.html  wxmpl-pysrc.html  wxmpl.Channel-class.html  wxmpl.FigurePrinter-class.html  wxmpl.PlotApp-class.html  wxmpl.PlotFrame-class.html  wxmpl.PlotPanel-class.html  wxmpl.PointEvent-class.html  wxmpl.SelectionEvent-class.html  wxmpl.StripCharter-class.html
wxmpl/: __init__.py
